# Network-Triage-Tool

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  FIX_SUMMARY.md  GEMINI.md  IMPROVEMENT_PLAN.md  INSTALLATION-GUIDE.md  MODERNIZATION_PLAN.md  Makefile  Network Triage Tool.spec  PHASE2_PROGRESS_SUMMARY.md  PHASE3_PR_SUMMARY.md  README.md  RELEASE-NOTES-PHASE3.md  ROADMAP.md  captured_packet.pcap  docker-compose.yml  install.ps1  install.sh  main_app.py  network_toolkit.py  output.txt  pyproject.toml  requirements.txt  start.command  wifi_inspector_final.py  wifi_inspector_final_debug.py  wifi_inspector_v2.py  wifi_inspector_v3.py  wifi_inspector_v4.py
.github/: dependabot.yml
.github/workflows/: phase3-tests.yml  python-app.yml  python-ci.yml
Network-Triage.app/Contents/: document.wflow
archive/Network-Triage.app/Contents/MacOS/: Automator Application Stub
docs/: Postmortem_Pyinstaller.md  Postmortem_TUI_Migration.md  README.md  TODO.md
docs/archive/: IMPROVEMENT_PLAN.md  PHASE1_SUMMARY.md  PHASE2_PROGRESS_SUMMARY.md  PHASE2_TYPE_SAFETY_SUMMARY.md  Postmortem_TUI_Migration.md  README.md  TODO.md
docs/archive/PHASE_4.3/: PHASE_4.3_QUICK_START.md  README_FIX.md  TEST_FIX_APPLIED.md
docs/archive/legacy_root_archive/: PHASE3_PR_SUMMARY.md  start.command  warp.md
docs/archive/legacy_root_archive/Network-Triage.app/Contents/: Info.plist  document.wflow
docs/archive/legacy_root_archive/Network-Triage.app/Contents/_CodeSignature/: CodeResources
docs/getting-started/: installation.md  quick-start.md
docs/guides/: README.md  error-handling.md  phase3-diagnostics-api.md  phase4-foundation-architecture.md
docs/planning/: MODERNIZATION_PLAN.md  phase4-integration.md  phase4.3-port-scanner.md  roadmap.md
docs/releases/: phase3.md
docs/releases/PHASE_4.3/: CODE_CHANGES.md  FIX_SUMMARY.md  PHASE_4.3_QUICK_START.md  QUICK_FIX_GUIDE.md  README_FIX.md  REAL_WORLD_USAGE.md  TESTING_IN_REAL_APP.md  TEST_FIX_APPLIED.md
src/: __init__.py  triage.tcss  tui_app.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/macos/: main_app.py  network_toolkit.py
src/network_triage/: __init__.py  app.py  config.py  exceptions.py  exports.py  logging.py  plugins.py  triage.tcss  utils.py
src/network_triage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/network_triage/linux/: __init__.py  network_toolkit.py
src/network_triage/macos/: main_app.py  network_toolkit.py
src/network_triage/shared/: shared_toolkit.py  traffic_health.py
src/network_triage/windows/: network_toolkit.py
src/shared/: __init__.py  dns_utils.py  latency_utils.py  port_utils.py  shared_toolkit.py
src/tui/: __init__.py
src/tui/widgets/: __init__.py  base.py  components.py  connection_monitor_widget.py  dns_resolver_widget.py  lan_bandwidth_widget.py  latency_analyzer_widget.py  port_scanner_widget.py  scheduler_widget.py  traffic_health_widget.py
temp/logs_59281324915/: 0_Run Tests.txt  1_Lint and Security Scan.txt
temp/logs_59281324915/Lint and Security Scan/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python 3.11.txt  4_Install dependencies.txt  5_Lint with ruff.txt  system.txt
temp/logs_59281324915/Run Tests/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python 3.11.txt  4_Install dependencies.txt  5_Run tests with pytest.txt  9_Post Set up Python 3.11.txt  system.txt
test/project_specific/: mac_debug.py  packet_inspector.py  wifi_inspector.py
tests/: __init__.py  conftest.py  debug_tabs.py  output.txt  test_app_real.py  test_dns_widget_functional.py  test_error_handling.py  test_health_checks.py  test_latency_widget_functional.py  test_linux_toolkit.py  test_macos_toolkit.py  test_phase3_diagnostics.py  test_phase4_connection_monitor.py  test_phase4_dns_widget.py  test_phase4_foundation.py  test_phase4_lan_bandwidth.py  test_phase4_latency_widget.py  test_phase4_port_scanner_widget.py  test_phase5_traffic_health.py  test_plugins.py  test_port_scanner_widget_functional.py  test_scheduler_widget.py
tests/project_specific_debug/: __init__.py  mac_debug.py  packet_inspector.py  speedtest_debug.py  verify_capture.py  wifi_inspector.py  wifi_inspector_final.py  wifi_inspector_v2.py  wifi_inspector_v3.py  wifi_inspector_v4.py
