[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "network-triage"
version = "0.5.4"
description = "A terminal-based network diagnostic tool."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "netmiko",
    "scapy",
    "psutil",
    "requests",
    "speedtest-cli",
    "textual",
    "python-nmap"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "bandit",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pip-audit",
    "mypy",
    "types-requests",
    "types-psutil",
    "types-PyYAML",
    "codespell"
]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501", # line too long
    "C901", # complexity
    "E701", # multiple statements on one line (colon) - common in this TUI code
    "E702", # multiple statements on one line (semicolon)
    "E722", # bare except
    "B018", # useless attribute access
    "B904", # raise from
    "S110", # try-except-pass
    "S314", # xml parsing
    "S602", # subprocess shell=True
    "S603", # subprocess untrusted input
    "S607", # subprocess partial path
    "E721", # type comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E402", "F401", "F841"] # tests often have unused imports/vars during debug

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
disable_error_code = ["attr-defined", "union-attr", "arg-type", "call-overload", "override", "assignment", "dict-item", "var-annotated", "misc"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B104", "B110", "B314", "B404", "B405", "B602", "B603", "B607"]

[tool.codespell]
skip = "*.json,*.zip,.git,venv,.*venv,temp,docs/archive,build,dist"
ignore-words-list = "nd,toolk"

[tool.coverage.run]
source = ["src"]
omit = ["src/network_triage/shared/*", "tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 45
show_missing = true

[project.scripts]
network-triage = "network_triage.app:run"

[tool.setuptools.package-data]
network_triage = ["*.tcss"]

# --- THIS IS THE MISSING PIECE ---
[tool.setuptools.packages.find]
where = ["src"]
