[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-triage"
version = "0.5.7"
description = "A terminal-based network diagnostic tool."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "netmiko>=4.3.0",
    "scapy>=2.5.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "speedtest-cli>=2.1.3",
    "textual>=0.52.0",
    "python-nmap>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "bandit>=1.7.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pip-audit>=2.7.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "types-PyYAML>=6.0.0",
    "codespell>=2.3.0",
    "pre-commit>=3.6.0",
    "pydantic>=2.6.0",
    "pytest-benchmark>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]
lint = [
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "codespell>=2.3.0",
]
type = [
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "types-PyYAML>=6.0.0",
]

[tool.ruff]
line-length = 127
target-version = "py314"

[tool.ruff.lint]
select = [
    "ALL",  # Enable all rules
]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "ANN401",  # Dynamically typed expressions
    "ARG001",  # Unused function argument
    "B008",    # Do not perform function calls in argument defaults
    "C901",    # Too complex
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "E501",    # Line too long
    "E701",    # Multiple statements on one line (colon)
    "E702",    # Multiple statements on one line (semicolon)
    "E722",    # Bare except
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default value in function definition
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "RET504",  # Unnecessary variable assignment before return statement
    "S101",    # Use of assert detected
    "S110",    # try-except-pass
    "S113",    # Probable use of requests call without timeout
    "S307",    # Probable insecure use of temp file/directory
    "S314",    # xml parsing
    "S603",    # subprocess with untrusted input
    "S607",    # subprocess with partial path
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "S101",  # Use of assert detected
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
    "scapy.*",
    "netmiko.*",
    "psutil.*",
    "nmap.*",
]
ignore_missing_imports = true

[tool.mypy-warn-unused-ignores]
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B104", "B110", "B314", "B404", "B405", "B602", "B603", "B607"]

[tool.codespell]
skip = "*.json,*.zip,.git,venv,.*venv,temp,docs/archive,build,dist"
ignore-words-list = "nd,toolk"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/network_triage/__init__.py",
    "src/network_triage/linux/*",
    "src/network_triage/windows/*",
    "src/network_triage.egg-info/*",
    "tests/*",
    "*/__pycache__/*",
]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Network Triage Tool Coverage Report"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--color=yes",
    "--durations=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "async: marks tests that require async",
    "network: marks tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.pytest-benchmark]
min_rounds = 5
max_time = 1.0
disable_gc = true
warmup = false

[project.scripts]
network-triage = "network_triage.app:run"

[project.urls]
Homepage = "https://github.com/knowoneactual/Network-Triage-Tool"
Repository = "https://github.com/knowoneactual/Network-Triage-Tool"
Issues = "https://github.com/knowoneactual/Network-Triage-Tool/issues"
Changelog = "https://github.com/knowoneactual/Network-Triage-Tool/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
network_triage = ["*.tcss"]

[tool.setuptools.packages.find]
where = ["src"]

# Modern tooling configurations
[tool.uv]
# uv-specific settings for reproducible builds
link-mode = "copy"
resolution = "highest"
prerelease = "allow"

[tool.uv.sources]
# Custom package sources if needed

# Development environment configuration
# Note: uv uses [project.optional-dependencies] for dependency groups

# Note: Development scripts are documented in DEVELOPER.md
# Use: uv run pytest, uv run ruff, etc.

# Modern Python tooling
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportPrivateUsage = "warning"

[tool.black]
line-length = 127
target-version = ["py314"]
skip-string-normalization = true
preview = true
