[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-triage"
version = "0.5.7"
description = "A terminal-based network diagnostic tool."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "netmiko>=4.3.0",
    "scapy>=2.5.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "speedtest-cli>=2.1.3",
    "textual>=0.52.0",
    "python-nmap>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "bandit>=1.7.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pip-audit>=2.7.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "types-PyYAML>=6.0.0",
    "codespell>=2.3.0",
    "pre-commit>=3.6.0",
    "pydantic>=2.6.0",
    "pytest-benchmark>=4.0.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]
lint = [
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "codespell>=2.3.0",
]
type = [
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "types-PyYAML>=6.0.0",
]

[tool.ruff]
line-length = 127
target-version = "py314"

[tool.ruff.lint]
select = [
    "ALL",  # Enable all rules
]
ignore = [
    "ANN001",  # Missing type annotation for arguments
    "ANN002",  # Missing return type annotation
    "ANN201",  # Missing return type annotation
    "ANN202",  # Missing return type annotation
    "ANN401",  # Dynamically typed expressions
    "ARG001",  # Unused function argument
    "ARG002",  # Unused argument
    "B008",    # Do not perform function calls in argument defaults
    "B018",    # Useless attribute access
    "B904",    # Re-raise with from
    "C901",    # Too complex
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "DTZ005",  # Naive datetime literal
    "ERA001",  # Naive datetime literal
    "E501",    # Line too long
    "E701",    # Multiple statements on one line (colon)
    "E702",    # Multiple statements on one line (semicolon)
    "E722",    # Bare except
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default value in function definition
    "FBT003",  # Boolean default value in lambda
    "PGH003",  # Use pytest.raises
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLW1510",  # Use `str.format()`
    "PLW1514", # Non-indented whitespace
    "PLW2901", # Loop variable overwritten
    "PTH110",  # Relative import
    "PTH118",  # Relative import
    "PTH120",  # Relative import
    "PTH123",  # Relative import
    "RUF001",  # Ambiguous character
    "RUF012",  # Mutable default in class
    "RET504",  # Unnecessary variable assignment before return statement
    "SIM105",  # Use `next(...)` instead of list comprehension
    "SIM108",  # Use ternary
    "SLF001",  # Use 'l' instead of 'l'
    "S101",    # Use of assert detected
    "S110",    # try-except-pass
    "S113",    # Probable use of requests call without timeout
    "S307",    # Probable insecure use of temp file/directory
    "S314",    # xml parsing
    "S603",    # subprocess with untrusted input
    "S607",    # subprocess with partial path
    "TID252",  # Relative imports
    "TRY003",  # Long messages in exception
    "TRY300",  # Consider else block
    "TRY301",  # Consider exception groups
    "TRY400",  # Use logging.exception
    "TRY401",  # Use exception group
    "BLE001",  # Blind exception
    "A002",    # Shadows builtin
    "G004",    # f-string in logging
    "G201",    # Use logging.exception
    "N818",    # Exception naming
    "PLR0912", # Too many branches
    "PERF401", # list.extend
    "PLR0911", # Too many returns
    "B018",    # Useless attribute access
    "D401",    # Docstring mood
    "D404",    # This in docstring
    "D205",    # Blank line
    "D400",    # Docstring period
    "D415",    # Docstring closing
    "E402",    # Import position
    "TC002",   # Type checking import
    "T201",    # print found
    "EM101",   # Exception literal
    "EM102",   # Exception f-string
    "UP047",   # Generic type parameters
    "COM812",  # Trailing comma
    "TC003",   # Type checking import
    "F841",    # Unused variable
    "PT018",   # Assertion broken down
    "RUF059",  # Unused unpacked
]

[tool.ruff.lint.per-file-ignores]
"src/*" = [
    "PLC0415", # Import should be at top-level
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
]
"tests/*" = [
    "ANN001", # Missing type annotation for arguments
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "PLC0415", # Import should be at top-level
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "S101",  # Use of assert detected
]
"tests/project_specific_debug/wifi_inspector*.py" = ["ALL"]
"tests/project_specific_debug/speedtest_debug.py" = ["ALL"]
"tests/project_specific_debug/packet_inspector.py" = ["ALL"]
"tests/project_specific_debug/mac_debug.py" = ["ALL"]
"tests/project_specific_debug/*.py" = [
    "D205",  # Blank line
    "D401",  # Docstring mood
    "E402",  # Import position
    "S602",  # shell=True
]
"tests/test_phase3_diagnostics.py" = [
    "PT009",  # assertAlmostEqual
]
"tests/test_phase4_foundation.py" = [
    "E402",  # Import position
    "E721",  # Type comparison
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
    "scapy.*",
    "psutil.*",
    "speedtest.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.mypy-warn-unused-ignores]
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B104", "B110", "B314", "B404", "B405", "B602", "B603", "B607"]

[tool.codespell]
skip = "*.json,*.zip,.git,venv,.*venv,temp,docs/archive,build,dist"
ignore-words-list = "nd,toolk"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--color=yes",
    "--durations=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "async: marks tests that require async",
    "network: marks tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.pytest-benchmark]
min_rounds = 5
max_time = 1.0
disable_gc = true
warmup = false

[project.scripts]
network-triage = "network_triage.app:run"

[project.urls]
Homepage = "https://github.com/knowoneactual/Network-Triage-Tool"
Repository = "https://github.com/knowoneactual/Network-Triage-Tool"
Issues = "https://github.com/knowoneactual/Network-Triage-Tool/issues"
Changelog = "https://github.com/knowoneactual/Network-Triage-Tool/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
network_triage = ["*.tcss"]

[tool.setuptools.packages.find]
where = ["src"]

# Modern tooling configurations
[tool.uv]
# uv-specific settings for reproducible builds
link-mode = "copy"
resolution = "highest"
prerelease = "allow"

[tool.uv.sources]
# Custom package sources if needed

# Development environment configuration
# Note: uv uses [project.optional-dependencies] for dependency groups

# Note: Development scripts are documented in DEVELOPER.md
# Use: uv run pytest, uv run ruff, etc.

# Modern Python tooling
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportPrivateUsage = "warning"

[tool.black]
line-length = 127
target-version = ["py314"]
skip-string-normalization = true
preview = true
